replaced appointment image and added disclaimer

--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -306,8 +306,24 @@
         <h1 class="lineSpacing">(line spacing)</h1>
         <h1 class="lineSpacing">(line spacing)</h1>
         <div class="appointBlock">
-            <div class="appointImg">
-                <img src="images/appointment-image.jpg" alt="Nurse booking Appointments">
+            <div class="appointDisc">
+                <div class="appointDiscTitle"><h1>Important Note:</h1></div>
+                <ul class="discList">
+                    <li class="discPoints">On booking an <b>ONLINE</b> appointment, <b>ADDITIONAL</b> charges <b>WILL BE APPLIED</b> on top of OPD fees. <br> (For Old Case, please bring your Krishna medical files)
+                        <ul class="charges">
+                            <li>New Case - Rs. 100 /-</li>
+                            <li>Old Case - Rs. 50 /-</li>
+                        </ul>
+                    </li>
+                    <li class="discPoints">ONLINE appointments will get the <b>HIGHEST PREFERENCE</b> and will be able to <b>SKIP THE WAITING LINE</b>.</li>
+                    <li class="discPoints">Fees are to be payed at the Reception Desk <b>AFTER</b> the appointment has been completed.</li>
+                    <li class="discPoints">Only appointment booking is <b>ONLINE</b>, consulation with the doctor will be <b>OFFLINE</b> at Krishna Hospital.</li>
+                    <li class="discPoints">ONLINE appointments are <b>ONLY</b> available <b>EVERY TUESDAY</b> and <b>EVERY FRIDAY</b> between <b>5PM to 7PM</b></li>
+                    <li class="discPoints">For patients having <b>SAME</b> appointment date and time-slot, <b>FIRST PREFERENCE</b> will be given to the patient who arrives <b>FIRST</b> at the hospital in the <b>APPOINTED TIME SLOT.</b></li>
+                    <li class="discPoints">If the consulting doctor is <b>NOT AVAILABLE</b> due to <b>ANY CIRCUMSTANCES</b>, then the appointment may get <b>DELAYED or CANCELLED</b>. And the hospital administration is <b>NOT RESPONSIBLE</b> for it. </li>
+                    <li class="discPoints">If the ONLINE appointment gets <b>DELAYED or CANCELLED</b>, then <b>NO EXTRA CHARGES</b> will be applied.</li>
+                    <li class="discPoints">To check waiting status or <b>ANY</b> other inquires call: <br> <b>+91 9978637506</b></li>
+                </ul>
             </div>
             <div class="appointForm">
                 <form action="#" id="appointForm" role="form">
@@ -336,9 +352,10 @@
                             <label for="slot">Preferred Time Slot</label>
                             <br>
                             <select class="form-control" id="timeslot" required>
-                                <option>11AM - 1PM</option>
-                                <option>3PM - 5PM</option>
-                                <option>5PM - 7PM</option>
+                                <option>5PM - 5:30PM</option>
+                                <option>5:30PM - 6PM</option>
+                                <option>6PM - 6:30PM</option>
+                                <option>6:30PM - 7PM</option>
                             </select>
                         </div>
                         <div class="submitBtn">
