renamed krishnamarkup and css files to index name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Krishna Women's Hospital</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="krishnaStyles.css">
+    <link rel="stylesheet" href="indexStyles.css">
     <!-- <link rel="stylesheet" href="sliderStyle.css"> -->
     <link rel="icon" href="images/krishna_logo.jpg">
     <script src="https://kit.fontawesome.com/cc0efb1716.js" crossorigin="anonymous"></script>
@@ -186,7 +186,7 @@
                     <img src="images/mock_doctor_logo.jpg">
                 </div>
                 <div class="visitDocsDes">
-                    <h1>Dr. Girish Patel</h1>
+                    <h1>Dr. Hiren Shah</h1>
                     <p class="title">Visiting Anesthesiologist</p>
                     <p class="desc"><br>M.B.B.S.</p>
                 </div>
@@ -206,7 +206,7 @@
                     <img src="images/mock_doctor_logo.jpg">
                 </div>
                 <div class="visitDocsDes">
-                    <h1>Dr. Hiren Shah</h1>
+                    <h1>Dr. Girish Patel</h1>
                     <p class="title">Visiting Anesthesiologist</p>
                     <p class="desc"><br>M.B.B.S.</p>
                 </div>
