--- a/services.html
+++ b/services.html
@@ -34,8 +34,8 @@
         <nav class="navBar">
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             <ul class="mainMenu">
-                <li class="button"><a href="krishnaMarkup.html#appointment">Make Appointment</button></li>
-                <li class="link"><a href="krishnaMarkup.html#top">Home</a></li>
+                <li class="button"><a href="index.html#appointment">Make Appointment</button></li>
+                <li class="link"><a href="index.html#top">Home Page</a></li>
                 <li class="link"><a href="#medpro">Medical Procedures</a></li>
                 <li class="link"><a href="#rooms">Room Categories</a></li>
                 <li class="link"><a href="#gallery">Gallery</a></li>
