--- a/services.html
+++ b/services.html
@@ -104,11 +104,11 @@
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/high_risk_pregnancy.jpg" alt="">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>High Risk Pregnancy Care</h1>
+                        <h1>High-Risk Pregnancy Care</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem labore minima est
                     </div>
@@ -124,12 +124,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/infertility.jpg" alt="">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/sonography.jpg" alt="">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -150,12 +150,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/laproscopy.jpg" alt="">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/gynec_operative_proc.jpg" alt="">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -177,12 +177,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/gynec_cancer.jpg" alt="Gynec Cancer">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/new_born_vaccination.jpg" alt="New Born Vaccinations">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -425,68 +425,9 @@
         </div>
     </section>
     <script src="./toggle.js"></script>
-    <script>
-        function copyText(element) {
-            var range, selection, worked;
+    <script src="./copytext.js"></script>
+    <script src="./slider.js"></script>
 
-            if (document.body.createTextRange) {
-                range = document.body.createTextRange();
-                range.moveToElementText(element);
-                range.select();
-            } else if (window.getSelection) {
-                selection = window.getSelection();
-                range = document.createRange();
-                range.selectNodeContents(element);
-                selection.removeAllRanges();
-                selection.addRange(range);
-            }
-
-            try {
-                document.execCommand('copy');
-                alert('Number copied');
-            }
-            catch (err) {
-                alert('unable to copy text');
-            }
-        }
-
-        var slides = document.querySelector('.slider-items').children;
-        var nextSlide = document.querySelector(".right-slide");
-        var prevSlide = document.querySelector(".left-slide");
-        var totalSlides = slides.length;
-        var index = 0;
-
-        nextSlide.onclick = function () {
-            next("next");
-        }
-        prevSlide.onclick = function () {
-            next("prev");
-        }
-
-        function next(direction) {
-
-            if (direction == "next") {
-                index++;
-                if (index == totalSlides) {
-                    index = 0;
-                }
-            }
-            else {
-                if (index == 0) {
-                    index = totalSlides - 1;
-                }
-                else {
-                    index--;
-                }
-            }
-
-            for (i = 0; i < slides.length; i++) {
-                slides[i].classList.remove("active");
-            }
-            slides[index].classList.add("active");
-
-        }
-    </script>
 </body>
 
 </html>
