Replaced filler text with actual content in index page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <div class="hospDes"> Krishna Women's Hospital,<br> Ahmedabad</div>
         <div class="headInfo">
             <div class="phone"> <img src="images/phone_icon-removebg-preview.png">&nbsp<p id='display'
-                onClick='copyText(this)'>+91 9978637506</p> (click to copy)</div>
-            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM and 5PM - 7PM
+                    onClick='copyText(this)'>+91 9978637506</p> (click to copy)</div>
+            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM
+                and 5PM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
             </div>
@@ -53,8 +54,10 @@
                 <div class="devs">Developer Contacts</div>
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
                 <span class="icons">
-                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/viskyyy.___/" target="_blank"><i class="fab fa-instagram" ></i></a>
+                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/viskyyy.___/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                     <a href="https://github.com/NerdyVisky" target="_blank"><i class="fab fa-github"></i></a>
                 </span>
             </ul>
@@ -66,14 +69,11 @@
                 <div class="homeTitle">
                     <h1 class="lineSpacing"></h1>
                     <h1>Welcome to Krishna Hospital</h1>
-                    <p>Established in 1994 by Dr. Nilesh Trivedi, Krishna Hospital aims to provide women care of the
-                        highest quality at the most
-                        affordable rates in Ahmedabad city.</p>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ad ea laudantium similique aliquid
-                        id accusantium odit, veritatis hic! Voluptate quos rem est quas in animi libero consectetur
-                        eligendi placeat magni explicabo voluptatibus, tempora ut numquam? Neque, suscipit optio, qui
-                        incidunt atque nulla maxime reiciendis eligendi deserunt repudiandae, voluptates quasi aperiam
-                        voluptate possimus sunt.</p>
+                    <p>Krishna Women's Hospital, under Dr. Nilesh Trivedi, aims to provide the
+                        highest quality of women care at the most
+                        affordable private hospital rates in Ahmedabad city.</p>
+                    <p>Located in Odhav (Ahmedabad East), Krishna Hospital has established its legacy as one of the
+                        premier women’s hospitals in the vicinity from the past few years.</p>
                 </div>
                 <div class="homeDoctor">
                     <div class="homeDocLogo">
@@ -99,15 +99,13 @@
                 <div class="aboutTitle">
                     <h1 class="lineSpacing">(line spacing)</h1>
                     <h1>About Krishna</h1>
-                    <p>15 years ago a group of physicians envisioned a hospital that met the health needs of women and
-                        fostered the understanding of how modern healthcare can improve the lives of women and their
-                        families. Woman's continues to build on the original premise reflected by its founders and is
-                        committed to its mission of providing compassionate and exceptional care to the women and
-                        infants it serves.</p>
-                    <p> Krishna Women’s Hospital is committed to a holistic philosophy of health and provides
-                        comprehensive services
-                        ranging from health promotion to clinical expertise and leadership in maternity services,
-                        gynaecology, cancer services and specialist care of newborn babies.</p>
+                    <p>Established in 1994 by Dr. Nilesh Trivedi, Krishna Hospital has been committed to a holistic
+                        philosophy of motherhood and women's care.</p>
+                    <p>Since the last 27 years, Krishna hospital has been consistently providing women care services
+                        ranging from regular consulation and 3D/4D Sonography to gynec operative procedures like
+                        Cesarean section, Hystrectomy, Laproscopy, Colposcopy and many more.</p>
+                    <p>Through its well-trained 24 member nursing team and state-of-the-art medical equipments, every
+                        patient at Krishna Hospital is assured of a flawless and comfortable medicare experience.</p>
                 </div>
             </div>
             <div class="aboutRight">
@@ -119,16 +117,18 @@
     <section id="services">
         <h1 class="lineSpacing">(line spacing)</h1>
         <h1 class="lineSpacing">(line spacing)</h1>
+        <div class="gotoservices"><a href="services.html">Go to Krishna Services <i
+                    class="fas fa-arrow-circle-right"></i></a></div>
         <div class="servicesBlock">
             <div class="section" id="tech">
                 <div class="serviceImg">
                     <img src="images/mock_tech_image.jpg">
                 </div>
                 <div class="techDes">
-                    <h1><a href="services.html#medpro" target="_blank">Medical Procedures</a></h1>
+                    <h1><a href="services.html#medpro">Medical Procedures</a></h1>
                     <p class="clickhere">Click on title to know more</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti labore hic ut, obcaecati
-                        fugit vero neque id sequi! Obcaecati iste nostrum totam?</p>
+                    <p>Krishna offers a range of gynec services including both clincial and surgical procedures, while
+                        also expertizing in obstretic services like high-risk pregnancy care and post-partum care.</p>
                 </div>
             </div>
             <div class="section" id="rooms">
@@ -136,10 +136,10 @@
                     <img src="images/mock_room_image.jpg">
                 </div>
                 <div class="roomDes">
-                    <h1><a href="services.html#rooms" target="_blank">Room Categories</a></h1>
+                    <h1><a href="services.html#rooms">Room Categories</a></h1>
                     <p class="clickhere">Click on title to know more</p>
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea temporibus aspernatur, cupiditate
-                        praesentium consectetur eum alias ad, repudiandae sed eaque voluptates ipsum voluptate!</p>
+                    <p>Krishna Hospital has a total 14 fully equipped rooms divided in three categories which
+                        provides its patients the freedom to pick their room of choice. </p>
                 </div>
             </div>
             <div class="section" id="gallery">
@@ -147,10 +147,10 @@
                     <img src="images/mock_gallery_image.jpg">
                 </div>
                 <div class="galleryDes">
-                    <h1><a href="services.html#gallery" target="_blank">Hospital Gallery</a></h1>
+                    <h1><a href="services.html#gallery">Hospital Gallery</a></h1>
                     <p class="clickhere">Click on title to know more</p>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium libero incidunt dicta
-                        hic possimus officia repudiandae eum, vero exercitationem natus non! Cum?</p>
+                    <p> Check out the hospital gallery section to view Krishna hospital's beautiful wooden interior
+                        design and have a glimpse of the facilities offered at the hospital.</p>
                 </div>
             </div>
         </div>
@@ -169,11 +169,8 @@
                 </div>
                 <div class="drNileshDes">
                     <h1>Dr. Nilesh Trivedi</h1>
-                    <p class="title">Head Gynecologist, <br> Krishna Hospital</p>
-                    <p class="desc"><br>M.D. D.G.O. <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Laborum
-                        suscipit iusto, facilis ab quas doloribus asperiores aliquam unde non sed, minima consectetur
-                        hic?</p>
+                    <p class="title">Head Gynecologist & Obstretician, <br> Krishna Hospital.</p>
+                    <p class="desc"><br>M.D. &nbsp D.G.O. <br>27 years of working experience.<br>Expertizes in Fetal Medicine, High-risk pregnancy care and Infertility treatments.</p>
 
                 </div>
             </div>
@@ -248,23 +245,36 @@
         <div class="teamStaffTitle">
             <h1>Staff Team</h1>
         </div>
-        <div class="chiefStaffBlock">
-            <div class="chiefStaff">
-                <div class="chiefStaffImg">
+        <br>
+        <div class="visitDocsBlock1">
+            <div class="visitDocs">
+                <div class="visitDocsImg">
                     <img src="images/mock_doctor_logo.jpg">
                 </div>
-                <div class="chiefStaffDes">
+                <div class="visitDocsDes">
                     <h1>Kamini Patel</h1>
-                    <p>Clinical Assistant</p>
+                    <br>
+                    <p class="title">Clinical Assistant</p>
                 </div>
             </div>
-            <div class="chiefStaff">
-                <div class="chiefStaffImg">
+            <div class="visitDocs">
+                <div class="visitDocsImg">
                     <img src="images/mock_doctor_logo.jpg">
                 </div>
-                <div class="chiefStaffDes">
+                <div class="visitDocsDes">
                     <h1>Nishith Vasavada</h1>
-                    <p>Accountant</p>
+                    <br>
+                    <p class="title">Accountant</p>
+                </div>
+            </div>
+            <div class="visitDocs">
+                <div class="visitDocsImg">
+                    <img src="images/mock_doctor_logo.jpg">
+                </div>
+                <div class="visitDocsDes">
+                    <h1>Ravji Prajapati</h1>
+                    <br>
+                    <p class="title">Hospital Manager</p>
                 </div>
             </div>
         </div>
@@ -275,8 +285,7 @@
                 </div>
                 <div class="staffDes">
                     <h1>Clinical Staff</h1>
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, voluptatum quidem. Eius
-                        recusandae illo, facere rerum omnis ad consequatur repellat?</p>
+                    <p> A highly-trained team of 7 clinical staff members ensures that the doctors get proper assistance in operative procedures.</p>
                 </div>
             </div>
             <div class="staff">
@@ -285,8 +294,7 @@
                 </div>
                 <div class="staffDes">
                     <h1>Administrative Staff</h1>
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, voluptatum quidem. Eius
-                        recusandae illo, facere rerum omnis ad consequatur repellat?</p>
+                    <p>An efficient team of 10 administration staff members ensures proper managment and delivery of all services at Krishna Hospital.</p>
                 </div>
             </div>
             <div class="staff">
@@ -295,8 +303,7 @@
                 </div>
                 <div class="staffDes">
                     <h1>House-Keeping Staff</h1>
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, voluptatum quidem. Eius
-                        recusandae illo, facere rerum omnis ad consequatur repellat?</p>
+                    <p> The house-keeping staff team at Krishna consists of 6 members and ensures proper sanitization and hygiene within the hospital premises.</p> </p>
                 </div>
             </div>
         </div>
@@ -306,22 +313,37 @@
         <h1 class="lineSpacing">(line spacing)</h1>
         <div class="appointBlock">
             <div class="appointDisc">
-                <div class="appointDiscTitle"><h1>Important Note:</h1></div>
+                <div class="appointDiscTitle">
+                    <h1>Important Note:</h1>
+                </div>
                 <ul class="discList">
-                    <li class="discPoints">On booking an <b>ONLINE</b> appointment, <b>ADDITIONAL</b> charges <b>WILL BE APPLIED</b> on top of OPD fees. <br> (For Old Case, please bring your Krishna medical files)
+                    <li class="discPoints">On booking an <b>ONLINE</b> appointment, <b>ADDITIONAL</b> charges <b>WILL BE
+                            APPLIED</b> on top of OPD fees. <br> (For Old Case, please bring your Krishna medical files)
                         <ul class="charges">
                             <li>New Case - Rs. 100 /-</li>
                             <li>Old Case - Rs. 50 /-</li>
                         </ul>
                     </li>
-                    <li class="discPoints">ONLINE appointments will get the <b>HIGHEST PREFERENCE</b> and will be able to <b>SKIP THE WAITING LINE</b>.</li>
-                    <li class="discPoints">Fees are to be payed at the Reception Desk <b>AFTER</b> the appointment has been completed.</li>
-                    <li class="discPoints">Only appointment booking is <b>ONLINE</b>, consulation with the doctor will be <b>OFFLINE</b> at Krishna Hospital.</li>
-                    <li class="discPoints">ONLINE appointments are <b>ONLY</b> available <b>EVERY TUESDAY</b> and <b>EVERY FRIDAY</b> between <b>5PM to 7PM</b></li>
-                    <li class="discPoints">For patients having <b>SAME</b> appointment date and time-slot, <b>FIRST PREFERENCE</b> will be given to the patient who arrives <b>FIRST</b> at the hospital in the <b>APPOINTED TIME SLOT.</b></li>
-                    <li class="discPoints">If the consulting doctor is <b>NOT AVAILABLE</b> due to <b>ANY CIRCUMSTANCES</b>, then the appointment may get <b>DELAYED or CANCELLED</b>. And the hospital administration is <b>NOT RESPONSIBLE</b> for it. </li>
-                    <li class="discPoints">If the ONLINE appointment gets <b>DELAYED or CANCELLED</b>, then <b>NO EXTRA CHARGES</b> will be applied.</li>
-                    <li class="discPoints">To check waiting status or <b>ANY</b> other inquires call: <br> <b>+91 9978637506</b></li>
+                    <li class="discPoints">ONLINE appointments will get the <b>HIGHEST PREFERENCE</b> and will be able
+                        to <b>SKIP THE WAITING LINE</b>.</li>
+                    <li class="discPoints">Fees are to be payed at the Reception Desk <b>AFTER</b> the appointment has
+                        been completed.</li>
+                    <li class="discPoints">Only appointment booking is <b>ONLINE</b>, consulation with the doctor will
+                        be <b>OFFLINE</b> at Krishna Hospital.</li>
+                    <li class="discPoints">ONLINE appointments are <b>ONLY</b> available <b>EVERY TUESDAY</b> and
+                        <b>EVERY FRIDAY</b> between <b>5PM to 7PM</b>
+                    </li>
+                    <li class="discPoints">For patients having <b>SAME</b> appointment date and time-slot, <b>FIRST
+                            PREFERENCE</b> will be given to the patient who arrives <b>FIRST</b> at the hospital in the
+                        <b>APPOINTED TIME SLOT.</b>
+                    </li>
+                    <li class="discPoints">If the consulting doctor is <b>NOT AVAILABLE</b> due to <b>ANY
+                            CIRCUMSTANCES</b>, then the appointment may get <b>DELAYED or CANCELLED</b>. And the
+                        hospital administration is <b>NOT RESPONSIBLE</b> for it. </li>
+                    <li class="discPoints">If the ONLINE appointment gets <b>DELAYED or CANCELLED</b>, then <b>NO EXTRA
+                            CHARGES</b> will be applied.</li>
+                    <li class="discPoints">To check waiting status or <b>ANY</b> other inquires call: <br> <b>+91
+                            9978637506</b></li>
                 </ul>
             </div>
             <div class="appointForm">
@@ -344,11 +366,9 @@
                         </div>
                         <div class="case">
                             <label for="phone">New Case</label>
-                            <input type="radio" class="form-control" id="phone" name="case" 
-                                required>
+                            <input type="radio" class="form-control" id="phone" name="case" required>
                             <label for="phone">Old Case</label>
-                            <input type="radio" class="form-control" id="phone" name="case" 
-                                required>
+                            <input type="radio" class="form-control" id="phone" name="case" required>
                         </div>
                         <div class="date">
                             <label for="date">Select Appointment Date</label>
@@ -366,7 +386,8 @@
                             </select>
                         </div>
                         <div class="submitBtn">
-                            <button onclick="sendMail()" type="submit" class="form-control" id="submitBtn" name="submit">Submit
+                            <button onclick="sendMail()" type="submit" class="form-control" id="submitBtn"
+                                name="submit">Submit
                             </button>
                         </div>
                     </div>
@@ -391,7 +412,7 @@
                     suscipit accusamus, blanditiis illum, ad placeat ducimus, unde quasi quis veritatis.</p>
                 <br>
                 <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp &nbsp+1 (668) 712 3428 <br>
-                    <img class="mail" src="images/mail_icon.jpg"> krishnahosp@gmail.com
+                    <img class="mail" src="images/mail_icon.jpg"> krishna.women.hosp@gmail.com
                 </p>
             </div>
             <div class="disclaimer">
@@ -409,7 +430,8 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Developers -
+            <p class="developers">Developer's Linked <i
+                class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="" target="_blank">Neelav Bhatiya</a>
                 <a href="" target="_blank">Riya Shah</a>
