--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             <ul class="mainMenu">
                 <li class="button"><a href="index.html#appointment">Make Appointment</button></li>
-                <li class="link"><a href="index.html#top">Home Page</a></li>
+                <li class="link"><a href="index.html#services">Home Page</a></li>
                 <li class="link"><a href="#medpro">Medical Procedures</a></li>
                 <li class="link"><a href="#rooms">Room Categories</a></li>
                 <li class="link"><a href="#gallery">Gallery</a></li>
@@ -396,7 +396,7 @@
                     suscipit accusamus, blanditiis illum, ad placeat ducimus, unde quasi quis veritatis.</p>
                 <br>
                 <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp &nbsp+1 (668) 712 3428 <br>
-                    <img class="mail" src="images/mail_icon.jpg"> krishnahosp@gmail.com
+                    <img class="mail" src="images/mail_icon.jpg"> krishna.women.hosp@gmail.com
                 </p>
             </div>
             <div class="disclaimer">
@@ -414,7 +414,8 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Developers -
+            <p class="developers">Developers Linked <i
+                class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="" target="_blank">Neelav Bhatiya</a>
                 <a href="" target="_blank">Riya Shah</a>
