removed rooms carousels and added images in gallery carousel

--- a/services.html
+++ b/services.html
@@ -57,9 +57,7 @@
                     <h1>Krishna Services</h1>
                 </div>
                 <div class="introDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sed fugit impedit debitis aspernatur
-                    odit nulla totam culpa, laboriosam reprehenderit, error iusto mollitia. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Harum veniam officiis.
+                    Since the past 27 years, Krishna Hospital has offered the best-in-class gynec services. Below
                 </div>
             </div>
             <div class="introImg">
@@ -228,23 +226,8 @@
                     </p>
                 </div>
             </div>
-            <div class="slider">
-                <div class="slider-items">
-                    <div class="itemslider active">
-                        <img src="images/ot_room.jpg" />
-                    </div>
-                    <div class="itemslider">
-                        <img src="images/mock_tech_image.jpg" />
-                    </div>
-                    <div class="itemslider">
-                        <img src="images/mock_room_image.jpg" />
-                    </div>
-
-                </div>
-                <!-- slider controls -->
-                <div class="left-slide"><</div>
-                        <div class="right-slide">></div>
-                        <!-- slider controls -->
+            <div class="roomImg">
+                <img src="images/mock_gallery_image.jpg" alt="">
             </div>
         </div>
             <div class="roomBlock">
@@ -260,24 +243,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="slider">
-                    <div class="slider-items">
-                        <div class="itemslider active">
-                            <img src="images/ot_room.jpg" />
-                        </div>
-                        <div class="itemslider">
-                            <img src="images/mock_tech_image.jpg" />
-                        </div>
-                        <div class="itemslider">
-                            <img src="images/mock_room_image.jpg" />
-                        </div>
-
-                    </div>
-                    <!-- slider controls -->
-                    <div class="left-slide"><</div>
-                            <div class="right-slide">></div>
-                            <!-- slider controls -->
-                    </div>
+                <div class="roomImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
                 </div>
             </div>
                 <div class="roomBlock">
@@ -294,24 +261,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="slider">
-                        <div class="slider-items">
-                            <div class="itemslider active">
-                                <img src="images/ot_room.jpg" />
-                            </div>
-                            <div class="itemslider">
-                                <img src="images/mock_tech_image.jpg" />
-                            </div>
-                            <div class="itemslider">
-                                <img src="images/mock_room_image.jpg" />
-                            </div>
-
-                        </div>
-                        <!-- slider controls -->
-                        <div class="left-slide"><</div>
-                                <div class="right-slide">></div>
-                                <!-- slider controls -->
-                        </div>
+                    <div class="roomImg">
+                        <img src="images/mock_gallery_image.jpg" alt="">
+                    </div>
                  </div>
                  <div class="roomBlock">
                     <div class="roomText evenRoom">
@@ -325,24 +277,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="slider">
-                        <div class="slider-items">
-                            <div class="itemslider active">
-                                <img src="images/ot_room.jpg" />
-                            </div>
-                            <div class="itemslider">
-                                <img src="images/mock_tech_image.jpg" />
-                            </div>
-                            <div class="itemslider">
-                                <img src="images/mock_room_image.jpg" />
-                            </div>
-        
-                        </div>
-                        <!-- slider controls -->
-                        <div class="left-slide"><</div>
-                                <div class="right-slide">></div>
-                                <!-- slider controls -->
-                        </div>
+                    <div class="roomImg">
+                        <img src="images/mock_gallery_image.jpg" alt="">
+                    </div>
                     </div>
                     
     </section>
@@ -369,12 +306,21 @@
                     <div class="itemslider">
                         <img src="images/mock_room_image.jpg" />
                     </div>
+                    <div class="itemslider">
+                        <img src="images/mock_staff_img.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_gallery_image.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_about-removebg-preview.png" />
+                    </div>
 
                 </div>
                 <!-- slider controls -->
                 <div class="left-slide"><</div>
-                        <div class="right-slide">></div>
-                        <!-- slider controls -->
+                <div class="right-slide">></div>
+                <!-- slider controls -->
                 </div>
         </div>
     </section>
